fixed right aligned quote

--- a/css/block-editor-styles.css
+++ b/css/block-editor-styles.css
@@ -44,11 +44,17 @@
 }
 
 /* Blockquotes */
-.wp-block-quote, .wp-block-quote.is-large {
+.wp-block-quote, .wp-block-quote.is-style-large {
 	margin: 0 20px;
 	padding: 0 20px;
 	border-left: 5px solid #dedee5;
 	font-style: italic;
+}
+
+.wp-block-quote.has-text-align-right {
+	margin: 0 20px;
+	padding: 0 20px;
+	border-right: 5px solid #dedee5;
 }
 
 /* Blockquote citations */
